Tercer Commit Antecedentes Academicos

--- a/CurriculumVitae.html
+++ b/CurriculumVitae.html
@@ -22,6 +22,12 @@
 			<li><strong>Estado Civil:</strong> Soltero.</li>
 		</ul>
 
+		<h2>Antecedentes Academicos</h2>
+		<ul>
+			<li>2013: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel nulla maxime, quos debitis aperiam autem quas aliquid deleniti quibusdam dolorem blanditiis qui praesentium, provident, cumque illo laboriosam voluptas omnis.</li>
+			
+		</ul>
+
 		</body>
-		
+
 		</html>
