Cuarto Commit Antecedentes Laborales

--- a/CurriculumVitae.html
+++ b/CurriculumVitae.html
@@ -25,7 +25,14 @@
 		<h2>Antecedentes Academicos</h2>
 		<ul>
 			<li>2013: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel nulla maxime, quos debitis aperiam autem quas aliquid deleniti quibusdam dolorem blanditiis qui praesentium, provident, cumque illo laboriosam voluptas omnis.</li>
-			
+
+		</ul>
+		
+		<h2>Antecedentes Laborales</h2>
+		<ul>
+			<li>2014 - 2017: 4to Año Ingeniería en Computación e Informática Universidad Andrés Bello</li>
+			<li>2006 - 2012: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis nam explicabo veritatis repellendus alias. Rerum eaque repellendus nam laudantium provident possimus veniam minima nemo? Numquam reprehenderit laborum enim esse sed!</li>
+			<li>2000 - 2005: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus architecto molestiae eos necessitatibus consequatur id fuga a tempora dolorum esse aliquid incidunt aliquam, debitis doloribus vitae quisquam quam, dicta rem..</li>
 		</ul>
 
 		</body>
