Quinto Commit Habilidades

--- a/CurriculumVitae.html
+++ b/CurriculumVitae.html
@@ -27,13 +27,18 @@
 			<li>2013: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel nulla maxime, quos debitis aperiam autem quas aliquid deleniti quibusdam dolorem blanditiis qui praesentium, provident, cumque illo laboriosam voluptas omnis.</li>
 
 		</ul>
-		
+
 		<h2>Antecedentes Laborales</h2>
 		<ul>
 			<li>2014 - 2017: 4to Año Ingeniería en Computación e Informática Universidad Andrés Bello</li>
 			<li>2006 - 2012: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis nam explicabo veritatis repellendus alias. Rerum eaque repellendus nam laudantium provident possimus veniam minima nemo? Numquam reprehenderit laborum enim esse sed!</li>
 			<li>2000 - 2005: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus architecto molestiae eos necessitatibus consequatur id fuga a tempora dolorum esse aliquid incidunt aliquam, debitis doloribus vitae quisquam quam, dicta rem..</li>
 		</ul>
+		<h2>Habilidades</h2>
+				<ul>
+					<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem non dolor ex nobis culpa veniam doloremque nesciunt, eveniet ducimus velit optio perspiciatis quos tempore dolore est tenetur, quisquam labore libero.</li>
+					<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam doloremque quaerat et id officiis, praesentium inventore, quae libero ex fugiat reprehenderit omnis placeat corporis a quasi impedit ipsum, sed vel.</li>
+				</ul>
 
 		</body>
 
