--- a/CurriculumVitae.html
+++ b/CurriculumVitae.html
@@ -24,7 +24,7 @@
 
 		<h2>Antecedentes Academicos</h2>
 		<ul>
-			<li>2013: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel nulla maxime, quos debitis aperiam autem quas aliquid deleniti quibusdam dolorem blanditiis qui praesentium, provident, cumque illo laboriosam voluptas omnis.</li>
+			<li><p>2013: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel nulla maxime, quos debitis aperiam autem quas aliquid deleniti quibusdam dolorem blanditiis qui praesentium, provident, cumque illo laboriosam voluptas omnis.</li></p>
 
 		</ul>
 
